--- a/ProyectoFinal_ActivosFijos/Views/Admin/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Admin/Index.cshtml
@@ -330,9 +330,9 @@
                 <h1>Bienvenido </h1>
                 <h3> A Toyota</h3>
                 <p>
-                    Te encuentras en la aprte administrativa de Toyota en donde puedes, ver los usario, editar los productos y agregar nuevos componentes.
+                    Te encuentras en la parte administrativa de Toyota en donde puedes ver los usuarios, editar los productos y agregar nuevos componentes.
                 </p>
-                <a href="https://toyota.com" class="btn">Descubre mas</a>
+                <a href="https://toyota.com" target="_blank" class="btn">Descubre mas</a>
             </div>
             <div class="header-right">
                 <div class="sq-box">
