--- a/ProyectoFinal_ActivosFijos/Views/Carros/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Index.cshtml
@@ -100,6 +100,8 @@
 </style>
 
 <main>
+    <h2 style="text-align:center;"> Lista de Carros</h2>
+
     <div class="container mt-4">
         <div class="row mb-4">
             <div class="col-lg-12">
@@ -129,7 +131,6 @@
         </div>
     </div>
     <div class="container mt-4">
-        <h2 class="mb-2 text-center">Lista de Carros</h2>
         <a class="btn btn-success mb-4" href="@Url.Action("Add")">Agregar</a>
         <div class="row">
             @foreach (var carro in Model)
