--- a/ProyectoFinal_ActivosFijos/Views/Repuesto/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Repuesto/Index.cshtml
@@ -3,9 +3,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 
-<h2>Repuestos</h2>
-<p>Esta es la página de Repuesto</p>
-
+<h2 style="text-align:center;"> Lista de Repuestos</h2>
 
 <script>
     // Ejecuta la función al cargar la página
@@ -108,193 +106,6 @@
             color: white !important;
         }
 </style>
-@*<style>
-
-        .card-body {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-
-
-        .carousel-item {
-            text-align: center;
-            overflow: hidden;
-        }
-
-            .carousel-item img {
-                max-height: 300px;
-                width: 100%;
-                object-fit: cover;
-            }
-
-        .carousel-indicators {
-            bottom: 10px;
-        }
-
-            .carousel-indicators button {
-                width: 10px;
-                height: 10px;
-                border-radius: 50%;
-            }
-
-            .carousel-indicators [data-bs-target] {
-                box-sizing: content-box;
-                flex: 0 1 auto;
-                width: 12px;
-                height: 18px;
-                padding: 0;
-                margin-right: 3px;
-                margin-left: 3px;
-                text-indent: -999px;
-                cursor: pointer;
-                background-color: #fff;
-                background-clip: padding-box;
-                border: 0;
-                border-top: 10px solid transparent;
-                border-bottom: 10px solid transparent;
-                transition: opacity 0.6s ease;
-            }
-
-
-        /*Lo que sigue controla que todas las imagenes tengan el mismo tamaño y un width ya heredado de 100%*/
-        .img-container {
-            height: 232px; /* Altura deseada */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #ddd; /* Color de fondo si no hay imagen */
-        }
-
-        .img-fluid {
-            height: 232px;
-            object-fit: cover;
-        }
-
-        button:not(:disabled), [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled) {
-            cursor: pointer;
-            opacity: 1;
-        }
-
-
-        .contenedor-filtros {
-            /* border: solid 1px; */
-            display: table;
-            color: white;
-            align-items: center;
-            padding: 30px;
-            width: 98%;
-            margin: auto;
-            background: #4098d6;
-            box-shadow: 0px 94px 277px -6px #ffffff;
-        }
-
-
-        body {
-            /*background-image: url('/Content/images/fondoPrincipal.jpg');*/
-            background-color: #fff
-        }
-
-
-
-        .button-85 {
-            padding: 0.6em 2em;
-            border: none;
-            outline: none;
-            color: rgb(255, 255, 255);
-            background: #111;
-            cursor: pointer;
-            position: relative;
-            z-index: 0;
-            border-radius: 10px;
-            user-select: none;
-            -webkit-user-select: none;
-            touch-action: manipulation;
-        }
-
-            .button-85:before {
-                content: "";
-                background: linear-gradient( 45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000 );
-                position: absolute;
-                top: -2px;
-                left: -2px;
-                background-size: 400%;
-                z-index: -1;
-                filter: blur(5px);
-                -webkit-filter: blur(5px);
-                width: calc(100% + 4px);
-                height: calc(100% + 4px);
-                animation: glowing-button-85 20s linear infinite;
-                transition: opacity 0.3s ease-in-out;
-                border-radius: 10px;
-            }
-
-        @@keyframes glowing-button-85 {
-            0% {
-                background-position: 0 0;
-            }
-
-            50% {
-                background-position: 400% 0;
-            }
-
-            100% {
-                background-position: 0 0;
-            }
-        }
-
-        .button-85:after {
-            z-index: -1;
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: #222;
-            left: 0;
-            top: 0;
-            border-radius: 10px;
-        }
-
-        .button-29 {
-            align-items: center;
-            appearance: none;
-            background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
-            border: 0;
-            border-radius: 6px;
-            box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
-            box-sizing: border-box;
-            color: #fff;
-            cursor: pointer;
-            display: inline-flex;
-            font-family: "JetBrains Mono",monospace;
-            height: 48px;
-            justify-content: center;
-            line-height: 1;
-            list-style: none;
-            overflow: hidden;
-            padding-left: 16px;
-            padding-right: 16px;
-            position: relative;
-            text-align: left;
-            text-decoration: none;
-            transition: box-shadow .15s,transform .15s;
-            user-select: none;
-            -webkit-user-select: none;
-            touch-action: manipulation;
-            white-space: nowrap;
-            will-change: box-shadow,transform;
-            font-size: 18px;
-        }
-
-        .card:hover {
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            transform: scale(1.02);
-            transition: all 0.3s ease;
-        }
-    </style>*@
-
 
 <main>
     <div class="container mt-4">
@@ -329,9 +140,7 @@
         </div>
     </div>
     <div class="container mt-4">
-        <h2 class="mb-2 text-center">Lista de Repuestos</h2>
-
-        @*<a href="@Url.Action("Index", "Admin")" class="btn btn-success">Regresar al menú principal</a>*@
+               
         <a class="btn btn-success mb-4" href="@Url.Action("Add")">Agregar</a>
 
         <div class="row">
