--- a/ProyectoFinal_ActivosFijos/Views/Shared/_AdminLayout.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Shared/_AdminLayout.cshtml
@@ -306,50 +306,27 @@
 
             <a href="@Url.Action("Index", "Admin")" class="logo"><h3>Toyota</h3></a>
 
-
             <ul class="nav-link">
                 <li><a href="@Url.Action("Index", "Admin")" class="active">Home</a></li>
                 <li><a href="@Url.Action("Index", "Usuario")">Usuarios</a></li>
                 <li><a href="@Url.Action("Index", "Repuesto")">Repuestos</a></li>
                 <li><a href="@Url.Action("Index", "Carros")">Carros</a></li>
             </ul>
-
+           
             <ul class="social-link">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <img src="~/images/profile-icon.png" alt="Perfil" style="width: 24px; height: 24px;" />
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="AdminDropdown">
-                        <a class="dropdown-item" href="@Url.Action("CerrarSesion", "Admin")">Cerrar Sesion</a>
-                        <a class="dropdown-item" href="@Url.Action("Edit", "Comprador", new { id = (Session["UsuarioActual"] as ProyectoFinal_ActivosFijos.Models.ViewModel.UsuariosViewModel)?.Id })">Gestion de Perfil</a>
+                        <a class="dropdown-item" href="@Url.Action("CerrarSesion", "Usuario")">Cerrar Sesion</a>
+                        <a class="dropdown-item" href="@Url.Action("Edit", "Usuario", new { id = (Session["UsuarioActual"] as ProyectoFinal_ActivosFijos.Models.ViewModel.UsuariosViewModel)?.Id })">Gestion de Perfil</a>
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
-   @*@ <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            @Html.ActionLink("Toyota", "Index", "Admin", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <button class="btn btn-link nav-link" onclick="location.href='@Url.Action("Index", "Usuario")'">CRUD USUARIO</button>
-                        <i class="fa-solid fa-users"></i>
-                    </li>
-                    <li class="nav-item">
-                        <button class="btn btn-link nav-link" onclick="location.href='@Url.Action("Index", "Repuesto")'">CRUD REPUESTO</button>
-                    </li>
-                    <li class="nav-item">
-                        <button class="btn btn-link nav-link" onclick="location.href='@Url.Action("Index", "Carros")'">CRUD CARROS</button>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>*@
+  
     <div class="container body-content">
         @RenderBody()
         <hr />
