--- a/ProyectoFinal_ActivosFijos/Views/Carros/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Index.cshtml
@@ -106,7 +106,7 @@
         <div class="row mb-4">
             <div class="col-lg-12">
                 <div class="contenedor-filtros">
-                    <form method="get" action="@Url.Action("Index", "Carro")" class="row g-3">
+                    <form method="get" action="@Url.Action("Index", "Carros")" class="row g-3">
                         <div class="col-md-4">
                             <label for="Modelo" class="form-label">Modelo:</label>
                             <input type="text" class="form-control" id="Modelo" name="Modelo" placeholder="-- Cualquier modelo --" value="@ViewBag.ModeloSeleccionado" />
@@ -123,7 +123,7 @@
                             <button type="submit" class="btn btn-danger w-50" style="margin-left: 160px; margin-top:10px;">Buscar</button>
                         </div>
                         <div class="col-md-6">
-                            <a href="@Url.Action("Index", "Carro")" class="btn btn-danger w-50" style="margin-left: 160px; margin-top: 10px;">Limpiar</a>
+                            <a href="@Url.Action("Index", "Carros")" class="btn btn-danger w-50" style="margin-left: 160px; margin-top: 10px;">Limpiar</a>
                         </div>
                     </form>
                 </div>
